--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -51,7 +51,7 @@
                         </div>
                         
                         <div class="profile-section">
-                            <form id="username-form" class="username-form">
+                            <form id="username-form" class="username-form" data-form-type="other">
                                 <div class="form-group">
                                     <p style="color: white; font-size: 0.95rem; margin-bottom: 1rem;">
                                         <span data-i18n="profile.currentUsername">Current username:</span> <span id="current-username" style="font-weight: 600;"></span>
@@ -59,7 +59,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="new-username" data-i18n="profile.changeUsername">Change username</label>
-                                    <input type="text" id="new-username" class="form-input" data-i18n-placeholder="profile.placeholder" placeholder="Enter new username" required minlength="3" maxlength="30">
+                                    <input type="text" id="new-username" class="form-input" data-i18n-placeholder="profile.placeholder" placeholder="Enter new username" required minlength="3" maxlength="30" autocomplete="username">
                                 </div>
                                 <div class="form-message" id="username-message"></div>
                                 <button type="submit" class="btn-primary" id="btn-save-username">
